fix: z-index cursor

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,8 +1,8 @@
 body {
     position: relative;
-     width: 100%;
-     margin: 0;
-    height: 100vh; 
+    width: 100%;
+    margin: 0;
+    height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -32,6 +32,7 @@ body {
     top: 50%;
     mix-blend-mode: difference;
     background-color: rgb(28, 15, 62);
+    z-index: 10000;
     border: 2px solid white;
     height: 30px;
     width: 30px;
